Did score activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuizApp">
         <activity
+            android:name=".FinishActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme">
+        </activity>
+        <activity
             android:name=".QuestionsActivity"
             android:screenOrientation="portrait">
         </activity>
